--- a/assets/state-monitoring/0900_daemonset.yaml
+++ b/assets/state-monitoring/0900_daemonset.yaml
@@ -31,12 +31,33 @@ spec:
         effect: NoSchedule
       serviceAccount: nvidia-dcgm-exporter
       serviceAccountName: nvidia-dcgm-exporter
+      nodeSelector:
+        feature.node.kubernetes.io/pci-10de.present: "true"
       containers:
+      - image: "FILLED BY THE OPERATOR"
+        name: pod-nvidia-gpu-metrics-exporter
+        securityContext:
+          privileged: true
+        volumeMounts:
+        - name: pod-gpu-resources
+          readOnly: true
+          mountPath: /var/lib/kubelet/pod-resources
+        - name: device-metrics
+          readOnly: true
+          mountPath: /run/prometheus
       - image: "FILLED BY THE OPERATOR"
         name: nvidia-dcgm-exporter
         securityContext:
-          runAsNonRoot: false
-          runAsUser: 0
+          privileged: true
+        volumeMounts:
+        - name: device-metrics
+          mountPath: /run/prometheus
 
-      nodeSelector:
-        feature.node.kubernetes.io/pci-10de.present: "true"
+      volumes:
+      - name: pod-gpu-resources
+        hostPath:
+          path: /var/lib/kubelet/pod-resources
+      - name: device-metrics
+        emptyDir:
+          medium: Memory
+
