add privileges to the exporter

--- a/assets/state-monitoring/0810_scc.openshift.yaml
+++ b/assets/state-monitoring/0810_scc.openshift.yaml
@@ -7,8 +7,8 @@ allowHostIPC: false
 allowHostNetwork: false
 allowHostPID: false
 allowHostPorts: false
-allowPrivilegeEscalation: false
-allowPrivilegedContainer: false
+allowPrivilegeEscalation: true
+allowPrivilegedContainer: true
 allowedCapabilities:
 - '*'
 allowedUnsafeSysctls:
