--- a/deployments/gpu-operator/templates/operator-configmap.yaml
+++ b/deployments/gpu-operator/templates/operator-configmap.yaml
@@ -19,3 +19,5 @@ data:
   {{- if and (ne (float64 (toString (.Values.operator.clusterversion))) 4.1) (ne (float64 (toString (.Values.operator.clusterversion))) 4.2) }}
   NVIDIA_DCGM_EXPORTER: "{{ .Values.dcgmExporter.repository }}/{{ .Values.dcgmExporter.image }}:{{ .Values.dcgmExporter.version }}"
   {{- end }}
+  POD_EXPORTER: "{{ .Values.podExporter.repository }}/{{ .Values.podExporter.image }}:{{ .Values.podExporter.version }}"
+
